--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,19 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0'
+
+    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
+
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+
 }
 
 test {
     useJUnitPlatform()
-    // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
