--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
 
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0'
 
-    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
-
-    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    testImplementation "io.github.bonigarcia:webdrivermanager:5.3.0"
 
 }
 
